--- a/wp-content/themes/flatsome-child/style.css
+++ b/wp-content/themes/flatsome-child/style.css
@@ -26,7 +26,7 @@ img {
 .row-bg {
     min-height: 100vh;
     min-width: 100vw;
-    background-image: url("../flatsome-child/img//bg-1.jpg");
+    background-image: url("../flatsome-child/img/bg-1.jpg");
     background-position: 50% 50%;
     display: flex;
     justify-content: space-around;
@@ -81,6 +81,36 @@ h3 {
 .bg-color {
     padding: 15px 0;
     background: rgb(249, 211, 116);
+}
+.footer {
+    background-color: rgb(36, 66, 134);
+    border-bottom: 1px solid #FED141;
+
+}
+.row-banner.footer .col-inner {
+    border-radius: 17px;
+    overflow: hidden;
+    box-shadow: 0 0 10px 1px #c7c7c79e;
+    box-shadow: none;
+}
+.footer p, 
+.footer li,
+.footer li a {
+    color: white;
+}
+.footer li:hover > a {
+    color: #FED141;
+}
+.absolute-footer.dark {
+    color: white;
+        padding: 0 200px;
+}
+/* back to top */
+.button.icon.circle {
+    background: #FED141;
+    color: #000;
+    right: 120px;
+    position: relative;
 }
 @media only screen and (max-width: 48em) {
 /*************** ADD MOBILE ONLY CSS HERE  ***************/
